# sats

./: .env.example  .gitignore  AGENTS.md  README.md  SATS_工程结构详解.md  architecture.txt  pyproject.toml  requirements.txt  sats.md
.understand-anything/: .understandignore  fingerprints.json  meta.json
docs/: AGENT_CAPABILITIES.md  SATS_ARCHITECTURE.md  SATS_MANUAL.md
sats/: __init__.py  __main__.py  catalog.py  chat.py  chat_artifacts.py  chat_components.py  chat_events.py  chat_planner.py  chat_preprocessor.py  chat_reference.py  chat_runtime.py  cli.py  config.py  dependencies.py  history.py  market_clock.py  memory.py  minute_periods.py  natural_output.py  natural_task.py  output_names.py  output_saver.py  progress.py  repl.py  runtime_status.py  skill_routing.py  skillhub.py  skills.py  stock_basic_lookup.py  stock_question.py  symbols.py  watchlist_editor.py
scripts/: generate_akshare_datasets.py  qmt_windows_bridge.config.json  qmt_windows_bridge.py
skills/: .skillhub_manifest.json
tests/: fixtures.py  test_agent.py  test_agent_recovery.py  test_anysearch.py  test_astock_provider.py  test_catalog.py  test_chan_composite_rule.py  test_chan_knowledge_rag.py  test_chan_llm_review.py  test_chan_signals_rule.py  test_chan_third_buy_rule.py  test_chat_artifacts.py  test_chat_backtest_runtime.py  test_chat_cli.py  test_chat_components.py  test_chat_events.py  test_chat_preprocessor.py  test_chat_reference.py  test_chat_runtime.py  test_chat_runtime_approval.py  test_config.py  test_conversation.py  test_daily_stock_analysis_bridge.py  test_deep_analysis.py  (+37 more)
(+746 files in other folders)
